# hf-agents-course

./: .gitignore  pyproject.toml
notebooks/unit1/: dummy_agent_library.ipynb
work/: README.md
work/onboarding/: validate_setup.py
work/onboarding/smollagents/: guided_tour.ipynb  text_to_sql.ipynb
